--- a/partials/main.html
+++ b/partials/main.html
@@ -243,7 +243,7 @@
 									</div>
 
 									<div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-										<a href="https://github.com/KeYang89/new_data_dashboard_testing" target="_blank">
+										<a href="https://github.com/KeYang89/keyang89.github.io" target="_blank">
 											<div class="layout yours">
 												<div class="layout-thumb">
 													<i class="fa fa-plus"></i>
