--- a/css/raw.css
+++ b/css/raw.css
@@ -85,6 +85,10 @@ h4 {
   width: 15px;
 }
 
+.dropdown-menu {
+  max-height: none !important;
+  overflow-y: visible !important;
+}
 /* Header and footer */
 
 .wrap {
